
20110103
    - (Jerome) Avoid calling OnSize twice per second and hogging the CPU.

20100228
    - (Jerome) Add get/set to set whether we should draw the 'Now' line.
      If so, automatically refresh every minute.

20101226
    - (Jerome) Always highlight current day

    - (Jerome) Add a green line to show current time

20101123
    - (Jerome) Fixed another memory leak.

20101120
    - (Jerome) Fixed a memory leak in wxSchedulerCore.Delete.

20101113
    - (Jerome) Setting the column width to the minimum in horizontal
      monthly view and switching to weekly would hang.

20101105
    - (Jerome) Tasks starting and ending at 00:00:00 the same day
    would not be displayed correctly.

20101015
    - (Jerome) One can change the minimum width of days in horizontal
      mode, as if it was a list header.

20101014
    - (Jerome) The month name in horizontal monthly view does not depend
      on the current horinzontal scroll value.

20101006
    - (Jerome) Method to choose the colour of the current day

v1.3.1:
20100808
    - (Jerome) One can now display several periods at once (except
      for months)

20100807
    - (Jerome) Bigger default widths

20100728
    - (Jerome) Fix preview size for weekly and monthly printouts. Fix
      printout in horizontal mode.

    - (Jerome) Printer setup dialog

    - (Jerome) Finished fixing print. Support for multiple pages in
      horizontal mode.

v1.3.0:
 (see http://code.google.com/p/wxscheduler/source/list for detailed changes)

 20100724
    - Added make tarball target to build a tar.gz package automatically

 20100216
    - (Jerome) More drawing optimizations; time to refresh the view in
      vertical mode with 40+ schedules back from 18s to 2s. Schedule
      change events now have a 'needsLayout' property; if False, the
      schedule's bounding rect does not change so it's safe to redraw
      only this area.

 20100213
    - (Jerome) Avoid unnecessary repaints, using a bitmap cache. Also